# Screen-Cast

./: README.md  lint-staged.config.js  package.json
src-tauri/: tauri.conf.json
tests/chromecast/: index.js  package.json
tests/screen-recording/: Cargo.toml
tests/screen-recording/src/: ffplay.rs  main.rs  screenshot.rs  stream.rs
